--- a/ChuniVController/ChuniVController/TouchPad.xaml
+++ b/ChuniVController/ChuniVController/TouchPad.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <Rectangle x:Name="LedStrip" Fill="#fff" Stroke="Black" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" />
+        <Rectangle x:Name="LedStrip" Stroke="#fff" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Fill="#000" />
 
     </Grid>
 </UserControl>
